refactor: modernize stream collectors to unmodifiable lists using .toList()